feat(phase-09): Complete Day 60 Graduation - Portfolio & Career Roadmap (Curriculum 100% Complete)